SERVER-24997 create CannotIndexParallelArrays error code