jstests/core/insert_illegal_doc.js
@@ -8,13 +8,13 @@ var res;
 // test upsert
 res = coll.update({}, {_id: 1, a: [1, 2, 3], b: [4, 5, 6]}, true);
 assert.writeError(res);
-assert.eq(res.getWriteError().code, 10088);
+assert.eq(res.getWriteError().code, ErrorCodes.CannotIndexParallelArrays);
 assert.eq(0, coll.find().itcount(), "should not be a doc");
 
 // test insert
 res = coll.insert({_id: 1, a: [1, 2, 3], b: [4, 5, 6]});
 assert.writeError(res);
-assert.eq(res.getWriteError().code, 10088);
+assert.eq(res.getWriteError().code, ErrorCodes.CannotIndexParallelArrays);
 assert.eq(0, coll.find().itcount(), "should not be a doc");
 
 // test update
@@ -22,5 +22,5 @@ res = coll.insert({_id: 1});
 assert.writeOK(res, "insert failed");
 res = coll.update({_id: 1}, {$set: {a: [1, 2, 3], b: [4, 5, 6]}});
 assert.writeError(res);
-assert.eq(res.getWriteError().code, 10088);
+assert.eq(res.getWriteError().code, ErrorCodes.CannotIndexParallelArrays);
 assert.eq(undefined, coll.findOne().a, "update should have failed");
